# telegraph

./: Cargo.toml  README.md  flake.nix
src/: main.rs  ui.rs
src/app/: cli.rs  config.rs  mod.rs  signal.rs
