[package]
name = "telegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
colored = "2.1.0"
crossterm = "0.28.1"
log = "0.4.22"
ratatui = "0.30.0"
simplelog = "0.12.2"
strum = "0.27.0"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.43"
json = "0.12.4"
eyre = "0.6.12"
